# Personal-Assistant-

./: .gitignore  backend  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  logger.py
backend/app/memory/: database.py
