[project]
name = "personal-assistant"
version = "0.1.0"
description = "Assistente pessoal inteligente."
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.11.0",
    "loguru>=0.7.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []